--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "express-boilerplate",
+  "name": "blogful-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/server.js",
   "scripts": {
     "test": "mocha --require test/setup.js",
     "dev": "nodemon src/server.js",
+    "migrate": "postgrator --config postgrator-config.js",
+    "migrate:test": "env NODE_ENV=test npm run migrate",
     "start": "node src/server.js",
     "predeploy": "npm audit",
     "deploy": "git push heroku main"
@@ -18,12 +20,15 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.4.1",
-    "morgan": "^1.10.0"
+    "knex": "^0.95.4",
+    "morgan": "^1.10.0",
+    "pg": "^8.6.0"
   },
   "devDependencies": {
     "chai": "^4.3.4",
     "mocha": "^8.3.2",
     "nodemon": "^2.0.7",
+    "postgrator-cli": "^3.2.0",
     "supertest": "^6.1.3"
   }
 }
