--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "helmet": "^4.4.1",
     "knex": "^0.95.4",
     "morgan": "^1.10.0",
-    "pg": "^8.6.0"
+    "pg": "^8.6.0",
+    "xss": "^1.0.8"
   },
   "devDependencies": {
     "chai": "^4.3.4",
